# abhinavnandwani.github.io

./: .gitignore  CNAME  DEVELOPMENT.md  README.md  _config.yml  blog.html  index.html  pyproject.toml  resume.html
_data/: cv.json
_pages/: about.md  cv.md
css/: style.css
js/: theme.js
posts/: template.html
scripts/: serve.py  serve_livereload.py
