[project]
name = "personal-website"
version = "1.0.0"
description = "Personal website for Abhinav Nandwani"
authors = [
    {name = "Abhinav Nandwani", email = "nandwani2@wisc.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livereload>=2.7.0",
]

[project.scripts]
serve = "scripts.serve:main"
serve-reload = "scripts.serve_livereload:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "livereload>=2.7.0",
]
